--- a/deploy/nginx/amonitor.conf
+++ b/deploy/nginx/amonitor.conf
@@ -1,16 +1,29 @@
 upstream storage {
     server 127.0.0.1:3000;
+    # or multi server fields
+    # least_conn;
+    # server 127.0.0.1:3000 max_fails=5 fail_timeout=60s;
+    # server 127.0.0.1:3001 max_fails=5 fail_timeout=60s;
 }
 
 server {
     listen          80;
     server_name     _;
+    root            /opt/amonitor/board;
 
-    gzip            on;
+    gzip                on;
+    gzip_comp_level     4;
+    gzip_min_length     512;
+    gzip_types          text/html
+                        text/css
+                        application/javascript
+                        application/json
+                        image/svg+xml;
 
-    location / {
-        root   /opt/amonitor/board;
-        index  index.html;
+    location ~* \.(?:css|js|gif|jpg|jpeg|png|svg)$ {
+        expires     max;
+        access_log  off;
+        add_header  Cache-Control "public";
     }
 
     location ~* ^/(api|register|status) {
